fix text overlap with quote attribution

--- a/styles.scss
+++ b/styles.scss
@@ -129,6 +129,7 @@ header {
         font-style: italic;
         font-weight: 200;
         color: $indigo;
+        margin-bottom: 5%;
     }
     .quote-attribution {
         //border: 3px solid yellow;
@@ -137,7 +138,7 @@ header {
         font-size: 1.75rem;
         font-style: italic;
         color: $indigo;
-        margin-bottom: 15%;
+        margin: 15% 0%;
     }
 }
 
